--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   chopper: ^6.1.4
   collection: ^1.17.1
   url_launcher: ^6.1.6
+  go_router: 10.0.0
 
 dev_dependencies:
   lint: ^2.1.2
